Closed Bug 899711 Opened 12 years ago Closed 12 years ago

Media files in smaller sizes when received via bluetooth from Mac book Pro doesn't show up in Music, Gallery and Video Apps

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

x86
macOS
defect
Not set
normal

Tracking

(blocking-b2g:leo+, firefox24 wontfix, firefox25 wontfix, firefox26 fixed, b2g18 fixed, b2g18-v1.0.0 wontfix, b2g18-v1.0.1 wontfix, b2g-v1.1hd fixed)

RESOLVED FIXED
1.1 QE5
blocking-b2g leo+
Tracking Status
firefox24 --- wontfix
firefox25 --- wontfix
firefox26 --- fixed
b2g18 --- fixed
b2g18-v1.0.0 --- wontfix
b2g18-v1.0.1 --- wontfix
b2g-v1.1hd --- fixed

People

(Reporter: pdahiya, Assigned: echou)

Details

(Whiteboard: [fixed-in-birch])

Attachments

(2 files)

STR: 1. connect unagi device to mac book pro via bluetooth 2. launch gallery app 3. from mac book, transfer photo of size 6 KB (see attached image) via bluetooth 4. on the unagi device, accept the transfer 5. View the gallery app for the newly added photo. Expected: Image is added Actual: Image is not added. Small size media (music, photo, video) files < 25 KB (approx.) when received via Bluetooth doesn't trigger change notification inside Gecko. https://mxr.mozilla.org/mozilla-central/source/dom/bluetooth/BluetoothOppManager.cpp#1339 As a result if the respective app (Music, Gallery, Video) is open in background, the file doesn't show in the app. Only closing and reopening respective app triggers scan, and shows the file. Media files in bigger sizes successfully triggers change notification for music, video and photos and if the app is open in background, the file shows up in the app immediately. Environment: m-c Gecko - d40bd3626f5c50dc141128bac2877036c9b897b5 Gaia master - adc94dd96cc417f2c3961b0176c2f2b2d96b9abe BuildId - 20130724123036 Device - Unagi Macbook OS Version - 10.8.4 Model - MacBook Pro 2011
I worked with Punam trying to reproduce this and everything works perfectly when transferring from my linux host. I even sent Punam one of my development images (for unagi) and the problem (BluetoothOppManager::NotifyAboutFileChange wasn't called) only manifested on her Mac. When the same small file was sent from my linux machine, BluetoothOppManager::NotifyAboutFileChange was called.
I'm going to change this to general, since my gut tells me this is a gecko problem and not a gaia problem. Just in case its relevant, adb shell cat /proc/version reports (for both my phone and Punam's phone): Linux version 3.0.8-perf (songsy@ubuntu-cdr) (gcc version 4.4.3 (GCC) ) #1 PREEMPT Wed Dec 5 04:47:49 PST 2012
Component: Gaia::Bluetooth File Transfer → General
This is so weird. Let me take a look.
Component: General → Bluetooth
Hi Punam, Dave, This is a Gecko Bluetooth bug, I'll take it. Thanks for reporting this.
Assignee: nobody → echou
I can reproduce this issue on Mac Air. This is because Mac Air wraps the photo in one packet, and BluetoothOppManager does not send notification in this case.
Attachment #783685 - Flags: review?(gyeh)
Comment on attachment 783685 [details] [diff] [review] patch 1: v1: Notify file change after receiving an one-packet-size file Review of attachment 783685 [details] [diff] [review]: ----------------------------------------------------------------- Looks great. r=me.
Attachment #783685 - Flags: review?(gyeh) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
blocking-b2g: --- → leo?
Triage - partners will take this as leo+ Attached example seems to be a common image size that can be downloaded from the internet.
blocking-b2g: leo? → leo+
Target Milestone: --- → 1.1 QE5
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: