Bug 899711 - Notify file change after receiving an one-packet-size file, r=gyeh