dom/bluetooth/BluetoothOppManager.cpp
@@ -413,6 +413,7 @@ BluetoothOppManager::ConfirmReceivingFile(bool aConfirm)
   if (success && mPutFinalFlag) {
     mSuccessFlag = true;
     FileTransferComplete();
+    NotifyAboutFileChange();
   }
 
   ReplyToPut(mPutFinalFlag, success);
